@@ -33,6 +33,7 @@ dependencies {
 
     // ops
     implementation("org.springframework.boot:spring-boot-starter-actuator")
+    developmentOnly("org.springframework.boot:spring-boot-docker-compose")
 
     // lombok
     compileOnly("org.projectlombok:lombok")
@@ -55,6 +56,7 @@ tasks.withType<JavaCompile> {
 
 tasks.withType<Test> {
     useJUnitPlatform()
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
 }
 
 spotless {
